[package]
name = "rstest_fixture_cache_example"
version = "0.1.0"
authors = ["michele <michele.damico@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rstest = "0.6.4"
lazy_static = "1.4.0"
